Section References Icon Line finished

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,33 @@
-<div class="header-container">
-    <div class="name-container">
-        <span>Cristina Jordi</span>
+<section header>
+    <div class="header-container">
+        <div class="name-container">
+            <span>Cristina Jordi</span>
+        </div>
+        <div class="qr-code">
+            <!-- <img src="../../assets/img/QR.png" alt="Open page on mobile device"> -->
+        </div>
+        <div class="nav-container">
+            <a href="#" id="#about">About Me <span>|</span></a>
+            <a href="#" id="#skills">My Skills <span>|</span></a>
+            <a href="#" id="#portfolio">Portfolio <span>|</span></a>
+
+        </div>
     </div>
-    <div class="qr-code">
-        <!-- <img src="../../assets/img/QR.png" alt="Open page on mobile device"> -->
+</section>
+
+<section about me>
+    <div>
+        <div class="social-media-container">
+            <img class="line-social-media" src="../../assets/img/references Icons_line/Vector 1_red.png">
+            <img class="transition" src="../../assets/img/references Icons_line/Github button.png">
+            <img class="transition" src="../../assets/img/references Icons_line/Email button.png">
+            <img class="transition" src="../../assets/img/references Icons_line/Linkedin button.png">
+            <a href="mailto:cristina.jordi@bluewin.ch" class="email"><span
+                    class="mail-name">cristina.jordi@bluewin.ch</span></a>
+        </div>
     </div>
-    <div class="nav-container">
-        <ul>
-            <li> <a href="#" id="#about">About Me <span>|</span></a></li>
-            <li> <a href="#" id="#skills">My Skills <span>|</span></a></li>
-            <li><a href="#" id="#portfolio">Portfolio <span>|</span></a></li>
-        </ul>
+    <div class="scroll-down-container">
+        <span class="scroll-down">Scroll down </span>
+        <img src="../../assets/img/references Icons_line/arrow-down-line.png">
     </div>
-</div>
+</section>
