--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,9 +3,11 @@
     src: url('../../assets/fonts/Allison_Script.otf') format('opentype');
 }
 
+// Begin Header Section
+
 .header-container {
-    left: 10%;
-    right: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
     position: fixed;
     top: 0;
     padding-top: 30px;
@@ -40,6 +42,7 @@
 }
 
 .nav-container {
+    float: right;
     position: absolute right;
     font-size: 0.8rem;
     // border: 1px solid green;
@@ -48,26 +51,146 @@
         color: rgb(221, 114, 15);
     }
 
-    ul {
-        letter-spacing: 1px;
-        list-style-type: none;
-        overflow: hidden;
-    }
-
-    li {
-        float: right;
-        cursor: pointer;
+    a {
+        margin-left: 12px;
+        color: white;
+        text-decoration: none;
+        position: relative;
 
         &:hover {
-            text-decoration: underline;
+            color: rgb(221, 114, 15);
+
+            span {
+                color: rgba(221, 114, 15, 0)
+            }
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            width: 100%;
+            height: 1px;
+            background-color: rgb(221, 114, 15);
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.5s ease-in-out;
+            
+        }
+
+        &:hover::after {
+            transform: scaleX(1);
+            width: 90%;
+        }
+    }
+}
+
+// End Header Section
+
+// Begin Reference Icon Line Section
+
+.social-media-container {
+    position: absolute;
+    width: 50%;
+    top: 90%;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    // border:1px solid white;
+
+    .line-social-media {
+        height: 4px;
+        width: 80px;
+        padding-right: 20px;
+    }
+
+    img.transition {
+        padding-right: 20px;
+        cursor: pointer;
+        transition: all 300ms ease-in-out;
+
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
+
+    .mail-name {
+        // E-Mail decoration
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -5px;
+            width: 100%;
+            height: 1px;
+            background-color: rgb(221, 114, 15);
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 1s ease-in-out;
         }
     }
 
     a {
-        display: block;
-        margin-left: 12px;
-        color: white;
+        color: #fff;
+        font-size: 1rem;
         text-decoration: none;
+
+        .mail-name {
+            position: relative;
+
+            &:hover {
+                    color: rgb(221, 114, 15);
+            }
+
+            &:hover::after {
+                transform: scaleX(1);
+                width: 100%;
+                color: rgb(221, 114, 15);
+            }
+        }
+    }
+}
+
+.scroll-down-container {
+    position: absolute;
+    top: 77%;
+    right: 7%;
+    z-index: 100;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    // border: 1px solid white;
+
+    span {
+        transform: rotate(90deg);
     }
 
+    img {
+        height: 25px;
+        object-fit: contain;
+        animation: arrow 4s ease-in-out infinite;
+
+        @keyframes arrow {
+            0% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(15px);
+            }
+
+            100% {
+                transform: translateY(0);
+            }
+        }
+    }
 }
+
+// End Reference Icon Line Section
