Round portrait formatted

--- a/src/app/iam/iam.component.html
+++ b/src/app/iam/iam.component.html
@@ -17,5 +17,20 @@
 
         </div>
         <div><img class="vector-shape-img" src="../../assets/img/i_am/vector_shape_iam.png"></div>
+
+        <div>
+            <div class="social-media-container">
+                <img class="line-social-media" src="../../assets/img/references Icons_line/Vector 1_red.png">
+                <img class="transition" src="../../assets/img/references Icons_line/Github button.png">
+                <img class="transition" src="../../assets/img/references Icons_line/Email button.png">
+                <img class="transition" src="../../assets/img/references Icons_line/Linkedin button.png">
+                <a href="mailto:cristina.jordi@bluewin.ch" class="email"><span
+                        class="mail-name">cristina.jordi@bluewin.ch</span></a>
+            </div>
+        </div>
+        <div class="scroll-down-container">
+            <span class="scroll-down">Scroll down </span>
+            <img src="../../assets/img/references Icons_line/arrow-down-line.png">
+        </div>
     </div>
 </section>
