--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -5,7 +5,7 @@
                 <h2>About Me</h2>
             </div>
             <p>
-                Hello!<br> I am a passionate frontend developer from Switzerland living in Sugiez, canton of Fribourg.
+                Hello! I am a passionate frontend developer from Switzerland living in Sugiez, canton of Fribourg.
                 The boundless possibilities of the IT industry have always fascinated me and sparked my curiosity.
                 This fascination has evolved into a deep passion for designing appealing, intuitive, and user-friendly
                 websites and applications.<br><br>
