--- a/src/app/iam/iam.component.html
+++ b/src/app/iam/iam.component.html
@@ -9,8 +9,9 @@
             <div class="iam-text-container">
                 <div>
                     <span class="iam-text">I am</span>
-                    <div><span class="name-text">CRISTINA JORDI</span></div>
+                    <div><span class="name-text">Cristina Jordi</span></div>
                     <div><span class="FD-text">FRONTEND DEVELOPER</span></div>
+                    <button>Let's Talk!</button>
                 </div>
 
             </div>
