--- a/src/app/iam/iam.component.scss
+++ b/src/app/iam/iam.component.scss
@@ -5,6 +5,9 @@
     src: url('../../assets/fonts/Allison_Script.otf') format('opentype');
 }
 
+$orange: #FA7902;
+$red: #FF4747;
+
 .vector-container {
     position: relative;
     display: flex;
@@ -44,28 +47,31 @@
     justify-content: flex-end;
     width: 100%;
     margin-bottom: 230px;
-    line-height: 41px;
+    line-height: 60px;
 
     .iam-text {
         position: absolute;
-        margin-left: -85px;
-        margin-top: 26px;
+        margin-left: -115px;
+        margin-top: 40px;
         margin-right: 10px;
-        font-size: 2.2rem;
+        font-size: 64px;  // 2.2rem
         transform: rotate(-90deg);
         font-family: 'Poppins', sans-serif;
-        color: rgb(221, 114, 15)
+        font-weight: 400;
+        color: #FFFFFF;
     }
 
     .name-text {
-        font-size: 3rem;
+        font-size: 90px;  // 3rem
         font-family: 'Poppins', sans-serif;
         font-weight: 700;
     }
 
     .FD-text {
-        font-size: 2.22rem;
+        font-size: 58px; // 2.22rem
         font-family: 'Poppins', sans-serif;
+        font-weight: 400;
+        color: $red;
     }
 }
 
