--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,11 @@
     padding: 0;
 }
 
-html{
+.full-height {
+    height: 100vh;
+}
+
+html {
     font-size: 20px;
 }
 
@@ -39,3 +43,48 @@ p {
     font-size: 0.9rem;
 }
 
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+
+// Button format
+
+button {
+    position: relative;
+    z-index: 1;
+    background-color: transparent;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    padding: 15px 30px;
+    border: none;
+    font-size: 23px;
+    font-weight: 400;
+    color: #fff;
+    cursor: pointer;
+    margin-top: 40px;
+    margin-left: 150px;
+    text-decoration: none;
+
+    &::before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        inset: 0;
+        background-color: #FA7902;
+        border-radius: 10px;
+        transition: all 300ms ease-in-out;
+    }
+
+    &:hover::before {
+        transition: all 300ms ease-in-out;
+        transform: scale(1.1);
+    }
+}
