--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,15 +59,18 @@ body {
 
 button {
     position: relative;
+    width: 165px;
+    height: 58px;
+    font-size: 23px;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    color: #fff;
     z-index: 1;
     background-color: transparent;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     padding: 15px 30px;
     border: none;
-    font-size: 23px;
-    font-weight: 400;
-    color: #fff;
     cursor: pointer;
     margin-top: 40px;
     margin-left: 150px;
