My skills completed

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,15 @@
 <section header>
     <div class="header-container">
         <div class="name-container">
-            <span>Cristina Jordi</span>
+            <span><a href="#">Cristina Jordi</a></span>
         </div>
         <div class="qr-code">
             <!-- <img src="../../assets/img/QR.png" alt="Open page on mobile device"> -->
         </div>
         <div class="nav-container">
-            <a href="#" id="#about">About Me <span>|</span></a>
-            <a href="#" id="#skills">My Skills <span>|</span></a>
-            <a href="#" id="#portfolio">Portfolio <span>|</span></a>
+            <a href="#about-me-anchor">About Me <span>|</span></a>
+            <a href="#my-skills-anchor">My Skills <span>|</span></a>
+            <a href="#portfolio-anchor">Portfolio <span>|</span></a>
 
         </div>
     </div>
