--- a/src/app/iam/iam.component.html
+++ b/src/app/iam/iam.component.html
@@ -30,8 +30,8 @@
             </div>
         </div>
         <div class="scroll-down-container">
-            <span class="scroll-down">Scroll down </span>
-            <img src="../../assets/img/references Icons_line/arrow-down-line.png">
+           <div class="text-scroll-down"><span class="scroll-down">Scroll down </span></div>
+            <div class="scroll-icon"><img src="../../assets/img/references Icons_line/arrow-down-line.png"></div>
         </div>
     </div>
 </section>
