--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,8 +1,8 @@
 <section about-me>
-    <div class="about-me-container-flex">
+    <div class="about-me-container-flex" id="about-me-anchor">
         <div class="about-me-container">
             <div>
-                <h2>About Me</h2>
+                <h2>About me</h2>
             </div>
             <p>
                 Hello! I am a passionate frontend developer from Switzerland living in Sugiez, canton of Fribourg.
