--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,37 +1,47 @@
+$orange: #FA7902;
+$red: #FF4747;
+
+#about-me-anchor {
+    height: 100vh;
+}
+
 // Begin About Me Section - Text
 
 .about-me-container-flex {
     position: relative;
-    margin-top: -50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
     padding-left: 10%;
     // border: 1px solid white;
 
 
     .about-me-container {
-        width: 50%;
+        width: 37%;
         display: flex;
         flex-direction: column;
+        // border: 1px solid white;
 
         p {
-            font-size: max(12px, 1vw);
+            font-family: 'Poppins', sans-serif;
+            font-weight: 400;
+            font-size: max(12px, 0.9vw);
             text-align: justify;
-            // font-size: 16px;
-            // line-height: 1.3rem; // Line-height of Text
         }
 
         h2 {
-            font-size: 2.5rem;
-            margin-bottom: 35px;
+            font-family: 'Poppins', sans-serif;
+            color: white;
+            font-weight: 700;
+            font-size: max(20px, 6.3vw); // ca. 90px
+            line-height: 6vw;
+            margin-bottom: 2vw; // 35px
         }
 
         .bulb-container {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            justify-content: center;
+            align-items: flex-start;
 
             img {
                 width: 50px;
@@ -42,8 +52,8 @@
 
         .puzzle-container {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            justify-content: center;
+            align-items: flex-start;
 
             img {
                 width: 50px;
@@ -59,7 +69,7 @@
 
     .ellipse-container {
         position: absolute;
-        right: 10%;
+        right: 15vw; // 10%
         width: 30vw; // 350px
         height: 30vw; // 350px
         display: flex;
@@ -73,7 +83,7 @@
             .portrait img {
                 position: absolute;
                 bottom: 1%;
-                right: 6%;
+                right: 3vw; // 6%
                 height: 30vw; //350px
                 object-fit: cover;
                 z-index: 15;
@@ -97,7 +107,7 @@
 
         img {
             height: 4px;
-            width: 10vw;
+            width: 15vw; //ca. 267px
         }
     }
 }
