--- a/src/app/iam/iam.component.scss
+++ b/src/app/iam/iam.component.scss
@@ -46,15 +46,15 @@ $red: #FF4747;
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    margin-bottom: 230px;
-    line-height: 60px;
+    margin-bottom: 190px;
+    line-height: 50px;
 
     .iam-text {
         position: absolute;
-        margin-left: -115px;
-        margin-top: 40px;
+        margin-left: -105px;
+        margin-top: 34px;
         margin-right: 10px;
-        font-size: 64px;  // 2.2rem
+        font-size: 2.6rem; // 64px
         transform: rotate(-90deg);
         font-family: 'Poppins', sans-serif;
         font-weight: 400;
@@ -62,13 +62,13 @@ $red: #FF4747;
     }
 
     .name-text {
-        font-size: 90px;  // 3rem
+        font-size: 3.9rem; // 90px
         font-family: 'Poppins', sans-serif;
         font-weight: 700;
     }
 
     .FD-text {
-        font-size: 58px; // 2.22rem
+        font-size: 2.52rem; // 58px
         font-family: 'Poppins', sans-serif;
         font-weight: 400;
         color: $red;
@@ -88,8 +88,8 @@ $red: #FF4747;
 
 .social-media-container {
     position: absolute;
-    width: 50%;
-    top: 106%;
+    width: 60%;
+    bottom:-9vh;
     left: 0;
     right: 0;
     z-index: 30;
@@ -101,11 +101,16 @@ $red: #FF4747;
     .line-social-media {
         height: 4px;
         width: 130px;
-        padding-right: 20px;
+        margin-right: 30px;
+
     }
 
     img.transition {
-        padding-right: 20px;
+        height: 30px;
+        object-fit: cover;
+        margin-right: 30px;
+        margin-left: 20px;
+
         cursor: pointer;
         transition: all 300ms ease-in-out;
 
@@ -116,29 +121,17 @@ $red: #FF4747;
 
     .mail-name {
         // E-Mail decoration
-        font-size: 1rem;
-
-        &::after {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: -5px;
-            width: 100%;
-            height: 1px;
-            background-color: rgb(221, 114, 15);
-            transform: scaleX(0);
-            transform-origin: left;
-            transition: transform 1s ease-in-out;
-        }
+        font-size: 1.2rem;
     }
 
     a {
+        position: relative;
         color: #fff;
         font-size: 1rem;
         text-decoration: none;
+        margin-left: 20px;
 
         .mail-name {
-            position: relative;
 
             &:hover {
                 color: rgb(221, 114, 15);
@@ -149,28 +142,47 @@ $red: #FF4747;
                 width: 100%;
                 color: rgb(221, 114, 15);
             }
+
+            &::after {
+                content: '';
+                position: absolute;
+                left: 0;
+                bottom: -2px;
+                width: 100%;
+                height: 1px;
+                background-color: rgb(221, 114, 15);
+                transform: scaleX(0);
+                transform-origin: left;
+                transition: transform 1s ease-in-out;
+            }
         }
     }
 }
 
 .scroll-down-container {
     position: absolute;
-    top: 85%;
+    top:0;
     right: 7%;
     z-index: 30;
-    height: 100px;
+    height:84vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     // border: 1px solid white;
 
-    span {
+    .text-scroll-down {
+        position: relative;
+        bottom: -85%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
         transform: rotate(90deg);
+        // // border: 1px solid white;
     }
 
-    img {
+    .scroll-icon {
         height: 25px;
         object-fit: contain;
         animation: arrow 4s ease-in-out infinite;
