--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,6 +47,7 @@ p {
 html,
 body {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -59,17 +60,16 @@ body {
 
 button {
     position: relative;
-    width: 165px;
-    height: 58px;
     font-size: 23px;
     font-weight: 400;
     font-family: 'Poppins', sans-serif;
     color: #fff;
+    width: 165px;
+    height:58px;
     z-index: 1;
     background-color: transparent;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    padding: 15px 30px;
     border: none;
     cursor: pointer;
     margin-top: 40px;
