--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-iam></app-iam>
 </div>
 <app-about-me></app-about-me>
-<app-myskills></app-myskills>
+<app-my-skills></app-my-skills>
+<app-portfolio></app-portfolio>
