--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
 <div class="full-height">
-<app-header></app-header>
-<app-iam></app-iam>
+    <app-header></app-header>
+    <app-iam></app-iam>
 </div>
+
+<!-- To Top Button -->
+<button class="top-button" (click)="scrollToTop()">
+    <img src="../assets/img/to-top.png">
+</button>
+
 <app-about-me></app-about-me>
 <app-my-skills></app-my-skills>
 <app-portfolio></app-portfolio>
