--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="grid-item" style="text-align: left;">
-                    <img src="dummy-image4.jpg" alt="Ring of Fire">
+                    <img src="../../assets/img/portfolio/mockup.png" alt="Ring of Fire">
                 </div>
             </div>
         </div>
