--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -111,11 +111,12 @@ h3 {
 
 .grid-item {
     margin-right: 60px;
+    margin-bottom: 120px;
     // border: 1px solid whitesmoke;
 }
 
 img {
-    width: 620px;
+    width: 450px;
     object-fit: cover;
 }
 
