--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -47,4 +47,5 @@
             <div><img src="../../assets/img/about_me/LINE 7_red.png"></div>
         </div>
     </div>
+    <div class="background-red"></div>
 </section>
