--- a/src/app/myskills/my-skills.component.html
+++ b/src/app/myskills/my-skills.component.html
@@ -14,6 +14,8 @@
                 <img src="../../assets/img/my_skills/material-design.png" alt="Material Design">
             </div>
 
+            <div class="background-orange-my-skills"></div>
+
             <div class="text-my-skills">
                 <h2>My skills</h2>
                 <p>I have grown my frontend developments skills that have allowed me to create different real projects.
