--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -11,11 +11,11 @@
         <div class="portfolio-container-text">
             <p>This page is a sample of my work - please feel free to try them out!</p>
         </div>
-
+        <!-- Start Grid System Portfolio -->
         <div class="grid-container-format">
             <div class="grid-container">
                 <div class="grid-item" style="text-align: right;">
-                    <img class="image-item" src="../../assets/img/portfolio/join.png" alt="Canban Project">
+                    <img class="image-item right" src="../../assets/img/portfolio/mockup.png" alt="Canban Project">
                 </div>
                 <div class="grid-item">
                     <h3>Join</h3>
@@ -23,56 +23,60 @@
                     <p class="text-portfolio">Task manager inspired by the Canban System. Create and <br> organize tasks
                         using drag and
                         drop functions, assign users and <br> categories. </p>
-                    <div class="align-buttons">
-                        <button>Live test</button>
-                        <button>Github</button>
+                    <div class="btn-right-portfolio">
+                        <button class="btn-bg-left">Live test</button>
+                        <button class="btn-bg-right">Github</button>
                     </div>
-
+                    <div class="background-red-portfolio"></div>
+                    <div class="background-orange-portfolio"></div>
                 </div>
                 <div class="grid-item" style="text-align: right;">
                     <h3>El Pollo Loco</h3>
                     <p class="title-grid">JavaScript | HTML | CSS | Backend </p>
                     <p class="text-portfolio">A simple Jump-and-Run game based on an object-oriented <br>
-                        approach. Help Pepe Peligroso to find coins and poison salsa <br> bottles
-                        to fight against the terrible chickens. </p>
-                    <div class="align-buttons">
-                        <button>Live test</button>
-                        <button>Github</button>
+                        approach. Help Pepe Peligroso to find coins and poisoned salsa <br> bottles
+                        to fight against the killer chickens. </p>
+                    <div class="btn-left-portfolio">
+                        <button class="btn-bg-left">Live test</button>
+                        <button class="btn-bg-right">Github</button>
                     </div>
 
                 </div>
                 <div class="grid-item" style="text-align: left;">
-                    <img src="../../assets/img/portfolio/pollo_loco.png" alt="El Pollo Loco">
+                    <img src="../../assets/img/portfolio/mockup.png" alt="El Pollo Loco">
                 </div>
                 <div class="grid-item" style="text-align: right;">
-                    <img src="../../assets/img/portfolio/pokedex.png" alt="Pokédex">
+                    <img class="right" src="../../assets/img/portfolio/mockup.png" alt="Pokédex">
                 </div>
                 <div class="grid-item">
                     <h3>Pokédex</h3>
                     <p class="title-grid">JavaScript | HTML | CSS | API </p>
                     <p class="text-portfolio">Based on the PokéAPI a simple library that provides and <br> catalogues
                         pokemon information. </p>
-                    <div class="align-buttons">
-                        <button>Live test</button>
-                        <button>Github</button>
+                    <div class="btn-right-portfolio">
+                        <button class="btn-bg-left">Live test</button>
+                        <button class="btn-bg-right">Github</button>
                     </div>
                 </div>
                 <div class="grid-item" style="text-align: right;">
                     <h3>Ring of Fire</h3>
-                    <p class="title-grid">Angular | Firebase | Material Design </p>
+                    <p class="title-grid">Angular | TypeScript | Firebase | Material Design </p>
                     <p class="text-portfolio">Ring Of Fire is an interactive drinking game app using Angular, <br>
                         Firebase,
                         and Material Design. It provides a fun way to play with <br> friends and family real time while
                         enjoying a few drinks. </p>
-                    <div class="align-buttons">
-                        <button>Live test</button>
-                        <button>Github</button>
+                    <div class="btn-left-portfolio">
+                        <button class="btn-bg-left">Live test</button>
+                        <button class="btn-bg-right">Github</button>
                     </div>
                 </div>
                 <div class="grid-item" style="text-align: left;">
                     <img src="../../assets/img/portfolio/mockup.png" alt="Ring of Fire">
                 </div>
             </div>
+
         </div>
+        <!-- End Grid System Portfolio -->
     </div>
+
 </section>
