--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <!-- To Top Button -->
 <button class="top-button" (click)="scrollToTop()">
-    <img src="../assets/img/to-top.png">
+    <img src="../assets/img/to-top.png" alt="To top">
 </button>
 
 <app-about-me></app-about-me>
