--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,14 +1,24 @@
+$orange: #FA7902;
+$red: #FF4747;
+
+// Begin To top Button Formatting
+
 .top-button {
     position: fixed;
     bottom: 20px;
     right: 20px;
     z-index: 9999;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     border: none;
     outline: none;
     cursor: pointer;
+    opacity: 0.3;
+
+    &:hover {
+        opacity: 1;
+    }
 }
 
 .top-button img {
@@ -16,12 +26,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 10px;
+    height: 15px;
     object-fit: cover;
 }
 
 button.top-button:before {
-    background-color: transparent;
-    border: 1px solid #fa7902;
-    border-radius: 5px;
+    background-color: $orange;
+    border-radius: 100%;
 }
+
+// End To top Button Formatting
