--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 <section about-me>
-    <div class="about-me-container-flex" id="about-me-anchor">
+    <div class="about-me-container-flex" id="about-me">
         <div class="about-me-container">
             <div>
                 <h2>About me</h2>
