--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,9 +7,9 @@
             <!-- <img src="../../assets/img/QR.png" alt="Open page on mobile device"> -->
         </div>
         <div class="nav-container">
-            <a href="#about-me-anchor">About Me <span>|</span></a>
-            <a href="#my-skills-anchor">My Skills <span>|</span></a>
-            <a href="#portfolio-anchor">Portfolio <span>|</span></a>
+            <a href="#about-me">About Me <span>|</span></a>
+            <a href="#my-skills">My Skills <span>|</span></a>
+            <a href="#portfolio">Portfolio <span>|</span></a>
 
         </div>
     </div>
