--- a/src/app/myskills/my-skills.component.html
+++ b/src/app/myskills/my-skills.component.html
@@ -1,5 +1,5 @@
 <section my-skills>
-    <div id="my-skills-anchor">
+    <div id="my-skills">
         <div class="my-skills-container">
             <div class="skills-icons-container">
                 <img src="../../assets/img/my_skills/angular.png" alt="Angular">
@@ -18,7 +18,8 @@
 
             <div class="text-my-skills">
                 <h2>My skills</h2>
-                <p>I have grown my frontend developments skills that have allowed me to create different real projects.
+                <p>I have grown my frontend developments skills that have allowed me to create different real
+                    projects.
                 </p>
                 <div class="button-center"> <button class="another-btn">Get in Touch!</button></div>
 
