--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,5 +1,5 @@
 <section portfolio>
-    <div id="portfolio-anchor">
+    <div id="portfolio">
         <div class="portfolio-container-flex">
             <div class="container-line-6"><img class="line-6" src="../../assets/img/portfolio/line_6_red.png"></div>
             <div class="container-text-portfolio">
