--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -13,6 +13,7 @@ $red: #FF4747;
     justify-content: space-between;
     align-items: center;
     padding-left: 10%;
+    height: 100vh;
     // border: 1px solid white;
 
 
