--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -22,3 +22,10 @@ $red: #FF4747;
     font-size: max(12px, 0.9vw);
     color: $red;
 }
+
+.error-message {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: max(12px, 0.9vw);
+    color: $red;
+}
