--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -116,9 +116,10 @@ h3 {
 }
 
 img {
-    width: 66%;
+    width: 55%;
     object-fit: cover;
     align-items: start;
+    // border: 1px solid whitesmoke;
 }
 
 img.right {
