--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,11 +1,46 @@
-<form (submit)="sendMail()" ngNativeValidate #myForm>
-    <input type="text" name="name" required #nameField placeholder="Your name"><br><br>
-    <input type="email" name="email" required placeholder="Your email"><br><br>
-    <textarea type="text" name="message" required #messageField placeholder="Your message"></textarea><br>
-    <button #sendButton class="btn-contact"> Send message 😊 </button>
-</form>
+<section contact>
+    <div class="contact_container">
 
-<div class="fade-in-out" [ngClass]="{'show': formSubmitted}">
-    <p class="thank-you-message">Vielen Dank für Ihre Nachricht! <br>
-        Wir werden uns bald bei Ihnen melden.</p>
-</div>
+        <div class="title_contact">
+            <h2>Contact</h2>
+
+            <div class="vektor-container-contact">
+                <div><img src="../../assets/img/contact/LINE 5_red.png"></div>
+            </div>
+        </div>
+
+        <div class="contact_content_container">
+            <div class="text_contact">
+                <h3>Got a problem to solve?</h3><br><br>
+                <p class="text">
+                    Contact me through this form, I am interested in hearing you, knowing your ideas and contributing to
+                    your
+                    projects with my work.<br><br>
+                    Need a Frontend developer? <b>Contact me!</b>
+                </p>
+
+                <div class="fade-in-out" [ngClass]="{'show': formSubmitted}">
+                    <p class="thank-you-message">Thank you very much for your message. We will get back to you as soon
+                        as possible!</p>
+                </div>
+            </div>
+
+            <div class="form_contact">
+                <form (submit)="sendMail()" ngNativeValidate #myForm>
+                    <input type="text" name="name" required #nameField placeholder="Your name"><br><br>
+                    <input type="email" name="email" required #emailField placeholder="Your email"><br><br>
+                    <textarea type="text" name="message" required #messageField
+                        placeholder="Your message"></textarea><br>
+                    <div class="btn_container"><button #sendButton class="btn-contact"> Send message 😊</button></div>
+                </form>
+
+
+            </div>
+
+        </div>
+
+
+        <div class="background-red-container"></div>
+    </div>
+
+</section>
