--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,31 +1,168 @@
 $orange: #FA7902;
 $red: #FF4747;
+$green: #50b650;
 
-.btn-contact {
-    width: 253px;
-    height: 58px;
+
+
+
+// Contact form - formatting
+
+.contact_container {
+    position: relative;
+    display: flex;
+    padding-left: 10%;
+    flex-direction: column;
+    margin-top: 100px;
+
+    .title_contact {
+        height: 150px;
+        // border: 1px solid white;
+
+        h2 {
+            font-family: 'Poppins', sans-serif;
+            color: white;
+            font-weight: 700;
+            font-size: max(20px, 6.3vw); // ca. 90px
+            line-height: 6vw;
+            margin-bottom: 2vw;
+        }
+
+        .vektor-container-contact {
+            position: absolute;
+            left: 0;
+            top: 8%;
+            z-index: 0;
+
+            img {
+                height: 4px;
+                width: 6vw; //ca. 70px
+            }
+        }
+    }
+
+    .contact_content_container {
+        display: flex;
+        height: 200px;
+        // border: 1px solid white;
+    }
+
+    .text_contact {
+        width: 35%;
+        // border: 1px solid white;
+
+        h3 {
+            line-height: 26px;
+            font-family: 'Poppins', sans-serif;
+            color: white;
+            font-weight: 700;
+            // font-size: 32px;
+            font-size: max(20px, 2vw); // ca. 32px
+            margin-bottom: -0.5vw;
+            line-height: 26px;
+        }
+
+        .text {
+            font-family: 'Poppins', sans-serif;
+            color: white;
+            font-weight: 400;
+            line-height: 20px;
+            font-size: max(12px, 1vw); // ca. 16px
+            margin-bottom: 2vw;
+        }
+
+        .fade-in-out {
+            margin-top: 50px;
+            opacity: 0;
+            transition: opacity 1.5s ease-in-out;
+        }
+
+        .fade-in-out.show {
+            opacity: 1;
+        }
+
+        .thank-you-message {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 400;
+            font-size: max(12px, 0.9vw);
+            color: $red;
+        }
+    }
+
+    .form_contact {
+        padding-left: 150px;
+
+        .btn_container {
+            display: flex;
+            justify-content: center;
+
+            .btn-contact {
+                width: 253px;
+                height: 58px;
+                margin-left: 0;
+                margin-right: 0;
+            }
+        }
+
+        input {
+            width: 517px;
+            height: 20px;
+            border-radius: 10px;
+            border: 1px solid $red;
+            padding: 15px 15px 15px 15px;
+            background-color: transparent;
+            font-family: 'Poppins', sans-serif;
+            color: white;
+            font-weight: 400;
+            font-size: 16px;
+        }
+
+        textarea {
+            width: 517px;
+            height: 202px;
+            border-radius: 10px;
+            border: 1px solid $red;
+            padding: 15px 15px 15px 15px;
+            background-color: transparent;
+            font-family: 'Poppins', sans-serif;
+            color: white;
+            font-weight: 400;
+            font-size: 16px;
+        }
+
+        ::placeholder {
+            font-family: 'Poppins', sans-serif;
+            color: white;
+            font-weight: 400;
+            font-size: 16px;
+        }
+
+
+    }
+
 }
 
-.fade-in-out {
-    margin-top: 50px;
-    opacity: 0;
-    transition: opacity 1.5s ease-in-out;
+.background-red-container {
+    position: absolute;
+    left: 0;
+    top: 83%;
+    background-image: url(../../assets/img/contact/red_3_footer.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 479px;
+    height: 510px;
 }
 
-.fade-in-out.show {
-    opacity: 1;
-}
-
-.thank-you-message {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    font-size: max(12px, 0.9vw);
-    color: $red;
-}
-
-.error-message {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    font-size: max(12px, 0.9vw);
-    color: $red;
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    border: 1px solid green;
+    -webkit-text-fill-color: white;
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+    transition: background-color 5000s ease-in-out 0s;
 }
