--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,9 @@
     <app-iam></app-iam>
 </div>
 
-<!-- To Top Button -->
-<button class="top-button" (click)="scrollToTop()">
-    <img src="../assets/img/to-top.png" alt="To top">
-</button>
-
 <app-about-me></app-about-me>
 <app-my-skills></app-my-skills>
 <app-portfolio></app-portfolio>
+
 <app-contact></app-contact>
+<app-footer></app-footer>
