--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -33,12 +33,13 @@
                         placeholder="Your message"></textarea><br>
                     <div class="btn_container"><button #sendButton class="btn-contact"> Send message 😊</button></div>
                 </form>
-
-
             </div>
 
         </div>
-
+        <!-- To Top Button -->
+        <button class="top-btn" (click)="scrollToTop()">
+            <img src="../assets/img/to-top.png" alt="To top">
+        </button>
 
         <div class="background-red-container"></div>
     </div>
